[metadata]
name = ijson
author = Rodrigo Tobar, Ivan Sagalaev
author_email = rtobar@icrar.org, maniac@softwaremaniacs.org
license = BSD
description = Iterative JSON parser with a standard Python iterator interface
url = https://github.com/ICRAR/ijson
long_description = file: README.rst
classifiers =
    Development Status :: 5 - Production/Stable
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Software Development :: Libraries :: Python Modules

[options]
packages = find:
